# git-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  packager.json  schema.json
src/: assets.rs  main.rs  system.rs
src/component/: mod.rs  repo_list.rs  search.rs
src/config/: editor_config.rs  mod.rs  repo_config.rs  ui_config.rs
src/repo/: language.rs  mod.rs  search_repo.rs
