[package]
name = "git_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2"
gpui-component = "0.2"
anyhow = "1.0"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }

global-hotkey = "0.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

tokei = "12.1"